# valkyrie

./: .qmake.cache  .vk.cache  AUTHORS  INSTALL  Makefile  Makefile.am  NEWS  README  README_DEVELOPERS  TODO  TODO.internal  bootstrap  config.status  configure  configure.in  icons.qrc  reconf.sh  restart.sh  valkyrie.pro  valkyrie.sources  vk_config.pri
config.tests/: logging.sh  mysql.test  qt.test  valgrind.test
dev/: astyle.conf  beautify_all.sh  update_copyright.sh
doc/: Makefile.am  about_gpl.html  about_qt.html  about_vk.html  index.html  intro.why_valkyrie.html  introduction.html  licence.html  license-gfdl.html  license-gpl.html  license.gfdl.html  license.gpl.html  licenses.html  links2.html  mainwindow.flags_widget.html  mainwindow.html  mainwindow.status_msg.html  mainwindow.tool_bar.html  mainwindow.tool_view.html  mainwindow.vg_ctl_tool_bar.html  manual.html  options_dialog.html  options_valgrind.html  support.html  tool-opts.html  vg-manual-core.html  vg-manual-mc.html
doc/images/: Makefile.am  bzip2-logo.xcf  images.readme
doc/internals/: release-HOWTO.txt
doc/vg-html/: FAQ.html  Makefile.am  QuickStart.html  ac-manual.html  cc-manual.html  cg-manual.annopts.html  cg-manual.html  cg-manual.profile.html  cg-tech-docs.annotate.html  cg-tech-docs.cachesim.html  cg-tech-docs.ccstore.html  cg-tech-docs.costcentres.html  cg-tech-docs.extensions.html  cg-tech-docs.html  cg-tech-docs.instrum.html  cg-tech-docs.output.html  cg-tech-docs.retranslations.html  cg-tech-docs.summary.html  dist.acknowledge.html  dist.authors.html  dist.html  dist.install.html  dist.news.html  dist.readme-developers.html  dist.readme-missing.html  dist.readme-packagers.html  dist.readme.html  dist.todo.html  faq.abort.html  faq.background.html  faq.help.html  faq.html  faq.installing.html  faq.misc.html  faq.notfound.html  faq.unexpected.html  hg-manual.html  index.html  license.gfdl.html  license.gpl.html  (+46 more)
doc/vg-html/images/: Makefile.am
doc/xml/: Makefile  about_gpl.xml  about_qt.xml  about_vk.xml  index.xml  introduction.xml  licenses.xml  mainwindow.xml  manual.xml  memcheck_view.xml  options_dialog.xml  options_dlg.xml  optionsdlg.xml  support.xml  vk-entities.xml
doc/xml/lib/: colours.readme  valkyrie.css  vk-common.xsl  vk-html-chunk.xsl  vk-html-single.xsl
docs/: context_help.html  dummy.html
docs/xml/: dist-docs.xml  index.xml  intro.xml  manual.xml  vk-entities.xml
icons/: context_help.xpm  filedlg_icons.h  memcheck_icons.h  msgbox_error.xpm  msgbox_icons.h  msgbox_info.xpm  msgbox_query.xpm  read.xpm  tb_handbook_back.xpm  tb_handbook_forward.xpm  tb_handbook_help.xpm  tb_handbook_home.xpm  tb_handbook_reload.xpm  tb_mainwin_blackbullet.xpm  tb_mainwin_icons.h  tb_mainwin_viewflags.xpm  tb_mainwin_viewflags2.xpm  tb_memcheck_icons.h  valkyrie_xpm.h  vglogview_icons.h  vglogview_readonly.xpm  vglogview_readwrite.xpm  write.xpm
m4/: bnv_have_qt.m4
nightly/: README.txt
nightly/conf/: ragnarok.conf  ragnarok.sendmail
src/: async_process.cpp  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  src.pro  tool_view.cpp  tool_view.h  vk_config.cpp  vk_config.h  vk_file_dialog.cpp  vk_file_dialog.h  vk_file_utils.cpp  vk_file_utils.h  vk_include.h  vk_utils.cpp  vk_utils.h  workspace.cpp  workspace.h
src/cachegrind/: cachegrind_view.cpp
src/core/: cachegrind_object.cpp  cachegrind_object.h  massif_object.cpp  massif_object.h  memcheck_object.cpp  memcheck_object.h  tool_object.cpp  tool_object.h  valgrind_object.cpp  valgrind_object.h  valkyrie_object.cpp  valkyrie_object.h  vk_objects.cpp  vk_objects.h
src/help/: context_help.cpp  context_help.h  hand_book.cpp  hand_book.h  help_about.cpp  help_about.h  help_context.cpp  help_context.h  help_handbook.cpp  help_handbook.h  help_urls.cpp  help_urls.h  html_urls.cpp  html_urls.h  vk_messages.cpp  vk_messages.h  vk_msgbox.cpp  vk_msgbox.h
src/icons/: msgbox_icons.h  tb_handbook_icons.h  valkyrie.xpm
src/massif/: massif_view.cpp
src/memcheck/: memcheck_view.cpp  xml_parser.h
tests/: Makefile.am  README.txt  vk_regtest
utils/: reconf.sh  update_copyright.sh
valkyrie/: Makefile.am  main.cpp  main_window.cpp  main_window.h  vk_config.cpp  vk_config.h  vk_file_utils.cpp  vk_file_utils.h  vk_utils.cpp  vk_utils.h
valkyrie/core/: cachegrind_object.cpp  cachegrind_object.h  massif_object.cpp  massif_object.h  memcheck_object.cpp  memcheck_object.h  tool_object.cpp  tool_object.h  valgrind_object.cpp  valgrind_object.h  valkyrie_object.cpp  valkyrie_object.h  vk_objects.cpp  vk_objects.h
valkyrie/help/: context_help.cpp  context_help.h  hand_book.cpp  hand_book.h  help_about.cpp  help_about.h  html_urls.cpp  html_urls.h  vk_messages.cpp  vk_messages.h
valkyrie/options/: cachegrind_options_page.cpp  cachegrind_options_page.h  intspinbox.cpp  intspinbox.h  massif_options_page.cpp  massif_options_page.h  memcheck_options_page.cpp  memcheck_options_page.h  options_page.cpp  options_page.h  options_widgets.cpp  options_widgets.h  options_window.cpp  options_window.h  parse_cmd_args.cpp  parse_cmd_args.h  valgrind_options_page.cpp  valgrind_options_page.h  valkyrie_options_page.cpp  valkyrie_options_page.h  vk_option.cpp  vk_option.h  vk_popt.cpp  vk_popt.h  vk_popt_option.h
valkyrie/tests/: vk_kdx_regtest
valkyrie/tests/kdexec/: valkyrie_tests-pQfkB.conf  valkyrie_tests.kxs
valkyrie/tool_utils/: async_process.cpp  async_process.h  vglog.cpp  vglog.h  vglogreader.cpp  vglogreader.h  vk_logpoller.cpp  vk_logpoller.h  vk_process.cpp  vk_process.h
valkyrie/tool_views/: cachegrind_view.cpp  cachegrind_view.h  massif_view.cpp  massif_view.h  memcheck_view.cpp  memcheck_view.h  tool_view.cpp  tool_view.h  vglogview.cpp  vglogview.h
vk_logmerge/: Makefile.am  logfile.cpp  logfile.h  vglog.cpp  vglog.h  vk_logmerge.cpp  vk_logmerge.h  vklm_main.cpp  vklm_main.h
vk_logmerge/tests/: Makefile.am  multilogfile  multilogfile.stdout.exp  multilogfile.vgtest  multilogfile1.xml  multilogfile2.xml  multilogfile3.xml  singlelogfile  singlelogfile.stdout.exp  singlelogfile.vgtest
(+110 files in other folders)
