## Makefile.am -- Process this file with automake to produce Makefile.in

docdir = $(prefix)/doc/

dist_doc_DATA = \
	about_gpl.html \
	about_qt.html \
	about_vk.html \
	index.html \
	introduction.html \
	intro.why_valkyrie.html \
	license-gfdl.html \
	license-gpl.html \
	licenses.html \
	mainwindow.flags_widget.html \
	mainwindow.html \
	mainwindow.status_msg.html \
	mainwindow.tool_bar.html \
	mainwindow.vg_ctl_tool_bar.html \
	mainwindow.tool_view.html \
	manual.html \
	options_dialog.html \
	options_valgrind.html \
	support.html \
	tool-opts.html \
	valkyrie.css \
	vg-manual-core.html \
	vg-manual-cg.html \
	vg-manual-mc.html \
	vg-manual-ms.html

SUBDIRS = images
