## Makefile.am -- Process this file with automake to produce Makefile.in

docdir = $(prefix)/doc/vg-html

doc_DATA = \
	ac-manual.html \
	cg-manual.html \
	cg-tech-docs.html \
	dist.acknowledge.html \
	dist.authors.html \
	dist.html \
	dist.install.html \
	dist.news.html \
	dist.readme-developers.html \
	dist.readme.html \
	dist.readme-missing.html \
	dist.readme-packagers.html \
	faq.html \
	FAQ.html \
	hg-manual.html \
	index.html \
	license.gfdl.html \
	license.gpl.html \
	licenses.html \
	lk-manual.html \
	manual-core.html \
	manual.html \
	manual-intro.html \
	mc-manual.html \
	mc-tech-docs.html \
	ms-manual.html \
	nl-manual.html \
	quick-start.html \
	QuickStart.html \
	tech-docs.html \
	vg_basic.css \
	writing-tools.html

SUBDIRS = images
